# coding-challenges

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Notes.txt  cmake_install.cmake  compile_commands.json  run.bat  run.sh
.cache/clangd/index/: 14.cpp.623A2EBC07ACB087.idx  utils.hpp.7BE399C2BB006999.idx
include/: utils.hpp
input/: 12.txt  125.txt  150.txt  151.txt  167.txt  2.txt  238.txt  28.txt  392.txt  42.txt  45.txt  58.txt  68.txt
src/: 12.cpp  121.cpp  122.cpp  125.cpp  134.cpp  135.cpp  138.cpp  14.cpp  141.cpp  150.cpp  151.cpp  167.cpp  2.cpp  21.cpp  238.cpp  274.cpp  28.cpp  380.cpp  392.cpp  42.cpp  45.cpp  55.cpp  58.cpp  68.cpp  88.cpp  Solution.cpp  WC454.ipynb  boilerplate.cpp
